force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Allow_Multi_Capture__c.field-meta.xml
<CustomField>
    <fullName>fw1__Allow_Multi_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multi Capture</label>
    <type>Checkbox</type>
</CustomField>