force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Key_Test__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Key_Test__c</fullName>
    <label>API Key (Test)</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>