force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Identifier__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Identifier__c</fullName>
    <label>API Live Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>