force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Location_ID__c</fullName>
    <label>API Live Location ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>