force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Password__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Password__c</fullName>
    <label>zAPI Live Password - OBSOLETE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>