force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Paypal_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Paypal_Client_ID__c</fullName>
    <label>Live PayPal Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>