force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Paypal_URL__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Paypal_URL__c</fullName>
    <label>Live PayPal URL</label>
    <type>Url</type>
</CustomField>