force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Signature2__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Signature2__c</fullName>
    <label>API Live Signature</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>