force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Signature__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Signature__c</fullName>
    <label>zAPI Live Signature - OBSOLETE</label>
    <length>180</length>
    <type>Text</type>
</CustomField>