force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Token__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Token__c</fullName>
    <label>API Live Token</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>