force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_Transaction_Key__c</fullName>
    <label>API Live Transaction Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>