force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Live_URL1__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Live_URL1__c</fullName>
    <label>API Live URL1</label>
    <type>Url</type>
</CustomField>