force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Test_Key__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Test_Key__c</fullName>
    <label>zAPI Test Key - OBSOLETE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>