force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Test_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Test_Secret_Key__c</fullName>
    <label>API Test Secret Key</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>