force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Test_Transaction_Key_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Test_Transaction_Key_Encrypted__c</fullName>
    <label>API Test Transaction Key Encrypted</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>