force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Test_User__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Test_User__c</fullName>
    <label>API Test User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>