force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__API_Test_Vendor__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Test_Vendor__c</fullName>
    <label>Merchant Login</label>
    <length>80</length>
    <type>Text</type>
</CustomField>