force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Bank_Verification_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Verification_Message__c</fullName>
    <label>Bank Verification Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>