force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Capture_Delay__c.field-meta.xml
<CustomField>
    <fullName>fw1__Capture_Delay__c</fullName>
    <label>Capture Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>