force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Category__c.field-meta.xml
<CustomField>
    <fullName>fw1__Category__c</fullName>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>