force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Days_Verify_ECheck_Status__c.field-meta.xml
<CustomField>
    <fullName>fw1__Days_Verify_ECheck_Status__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days Verify ECheck Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>