force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__DCC_Option__c.field-meta.xml
<CustomField>
    <fullName>fw1__DCC_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dynamic Currency Conversion</description>
    <inlineHelpText>Charge Amount will be in credit card currency</inlineHelpText>
    <label>Dynamic Currency</label>
    <type>Checkbox</type>
</CustomField>