force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Currency__c</fullName>
    <formula>fw1__Payment_Center_Setting__r.fw1__Email_Currency_Symbol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Currency</label>
    <type>Text</type>
</CustomField>