force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Description__c.field-meta.xml
<CustomField>
    <fullName>fw1__Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>