force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Display_Processor_Logo_On_Payment_Page__c.field-meta.xml
<CustomField>
    <fullName>fw1__Display_Processor_Logo_On_Payment_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Processor Logo On Payment Page</label>
    <type>Checkbox</type>
</CustomField>