force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Display_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>fw1__Display_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Shipping Address</label>
    <type>Checkbox</type>
</CustomField>