force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Do_Not_Allow_Credit_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Allow_Credit_Card_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Allow Credit Card Payment</label>
    <type>Checkbox</type>
</CustomField>