force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Duplicate_Window__c.field-meta.xml
<CustomField>
    <fullName>fw1__Duplicate_Window__c</fullName>
    <label>Duplicate Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>