force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Enable_Card_Present_Transactions__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_Card_Present_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Card-Present Transactions</label>
    <type>Checkbox</type>
</CustomField>