force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Enable_MOTO_Transaction__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_MOTO_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable MOTO Transaction</label>
    <type>Checkbox</type>
</CustomField>