force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Gateway_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Gateway_Type__c</fullName>
    <label>Gateway Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>