force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Get_Transaction_Details__c.field-meta.xml
<CustomField>
    <fullName>fw1__Get_Transaction_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box indicates whether another callout shall be made to get more details about a transaction (some processors, like PayPal, does not return all details in a single call).</description>
    <label>Get Transaction Details</label>
    <type>Checkbox</type>
</CustomField>