force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Ignore_AVS_Result__c.field-meta.xml
<CustomField>
    <fullName>fw1__Ignore_AVS_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore AVS Result</label>
    <type>Checkbox</type>
</CustomField>