force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Is_Platform__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platform</label>
    <type>Checkbox</type>
</CustomField>