force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Is_Strong_Customer_Auth_Enabled__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Strong_Customer_Auth_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable 3D Secure 2</label>
    <type>Checkbox</type>
</CustomField>