force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Is_TeleCheck__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_TeleCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is TeleCheck</label>
    <type>Checkbox</type>
</CustomField>