force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Live__c.field-meta.xml
<CustomField>
    <fullName>fw1__Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>