force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Make_Business_Checking_Default__c.field-meta.xml
<CustomField>
    <fullName>fw1__Make_Business_Checking_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make business checking the default bank account type.</inlineHelpText>
    <label>Default Business Checking</label>
    <type>Checkbox</type>
</CustomField>