force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Merchant_Reference_Length__c.field-meta.xml
<CustomField>
    <fullName>fw1__Merchant_Reference_Length__c</fullName>
    <label>Merchant Reference Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>