force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Number_Of_Microdeposits__c.field-meta.xml
<CustomField>
    <fullName>fw1__Number_Of_Microdeposits__c</fullName>
    <label>Number Of Microdeposits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>