force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Option_CVV2__c.field-meta.xml
<CustomField>
    <fullName>fw1__Option_CVV2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional CVV2</label>
    <type>Checkbox</type>
</CustomField>