force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Platform_Client_Id_Live__c.field-meta.xml
<CustomField>
    <fullName>fw1__Platform_Client_Id_Live__c</fullName>
    <label>Platform Production Client ID</label>
    <type>TextArea</type>
</CustomField>