force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Platform_Client_Id_Test__c.field-meta.xml
<CustomField>
    <fullName>fw1__Platform_Client_Id_Test__c</fullName>
    <label>Platform Development Client ID</label>
    <type>TextArea</type>
</CustomField>