force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>fw1__Redirect_URI__c</fullName>
    <description>Stripe Connect redirect URI</description>
    <formula>fw1__Payment_Center_Setting__r.fw1__Domain_Name__c + IF( fw1__Use_Flywire_API__c,&apos;/services/apexrest/fw1/flywire/updateStatus&apos;, &apos;/fw1__PlatformConnectSuccess&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redirect URI</label>
    <type>Text</type>
</CustomField>