force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Reports_API_Version__c.field-meta.xml
<CustomField>
    <fullName>fw1__Reports_API_Version__c</fullName>
    <label>Reports API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>