force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Require_Billing_Address_For_eCheck__c.field-meta.xml
<CustomField>
    <fullName>fw1__Require_Billing_Address_For_eCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Billing Address For eCheck</label>
    <type>Checkbox</type>
</CustomField>