force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Require_Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>fw1__Require_Billing_Zip_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Billing Zip/Postal Code</label>
    <type>Checkbox</type>
</CustomField>