force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Require_CVV_on_Tokenized_Card__c.field-meta.xml
<CustomField>
    <fullName>fw1__Require_CVV_on_Tokenized_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Require CVV</inlineHelpText>
    <label>Require CVV on Tokenized Card</label>
    <type>Checkbox</type>
</CustomField>