force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Require_Phone__c.field-meta.xml
<CustomField>
    <fullName>fw1__Require_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Phone</label>
    <type>Checkbox</type>
</CustomField>