force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Requires_Manual_Bank_Verification__c.field-meta.xml
<CustomField>
    <fullName>fw1__Requires_Manual_Bank_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Manual Bank Verification</label>
    <type>Checkbox</type>
</CustomField>