force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Retain_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>fw1__Retain_Payment_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some processors require payment details, i.e. credit card number, etc., in order to capture, void or refund. Check this box to retain the details.</description>
    <label>Retain Payment Details</label>
    <type>Checkbox</type>
</CustomField>