force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Secret_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>fw1__Secret_Encrypted__c</fullName>
    <label>Secret Encrypted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>