force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Selected_Card_Types__c.field-meta.xml
<CustomField>
    <fullName>fw1__Selected_Card_Types__c</fullName>
    <label>Selected Card Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>