force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Settlement_Method__c.field-meta.xml
<CustomField>
    <fullName>fw1__Settlement_Method__c</fullName>
    <label>Settlement Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>