force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Test_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Test_Amount__c</fullName>
    <label>Test Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>