force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Transarmor_Token__c.field-meta.xml
<CustomField>
    <fullName>fw1__Transarmor_Token__c</fullName>
    <label>Transarmor Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>