force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Unmatched_Transactions_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Unmatched_Transactions_Job_Id__c</fullName>
    <label>Unmatched Transactions Job Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>