force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Unmatched_Transactions_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>fw1__Unmatched_Transactions_Job_Time__c</fullName>
    <label>Unmatched Transactions Job Time</label>
    <length>2</length>
    <type>Text</type>
</CustomField>