force-app/main/default/objects/fw1__Payment_Processor__c/fields/fw1__Use_As_Default__c.field-meta.xml
<CustomField>
    <fullName>fw1__Use_As_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use As Default</label>
    <type>Checkbox</type>
</CustomField>